--- a/style.css
+++ b/style.css
@@ -1,13 +1,77 @@
 /* shared styles */
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-font-family: 'Lato', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Work Sans', sans-serif;
+body {
+  font-family: "Lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
+
+/* navbar section started */
+nav {
+  justify-content: space-between;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  min-height: 100px;
+  max-width: 1900px;
+  margin: 0 auto;
+}
+
+.logo-container {
+  display: flex;
+  width: 50%;
+  gap: 20px;
+}
+
+.logo-container img {
+  object-fit: cover;
+  margin-left: 180px;
+  width: 60px;
+}
+
+.logo-container h1{
+color: #0B0223;
+font-size: 25px;
+font-weight: 700;
+}
+
+.logo-title{
+    color: #FF42A5; 
+
+}
+
+.navbar-item-list{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.navbar-item-list a {
+color: #3C354F;
+text-align: center;
+font-size: 18px;
+font-weight: 500;
+gap: 32px;
+text-decoration: none;
+}
+
+.follow-icon{
+border-radius: 8px;
+background-color: rgba(11, 2, 35, 0.10);
+padding: 10px 15px;
+}
+
+/* navbar finished */
+
