--- a/responsive.css
+++ b/responsive.css
@@ -22,9 +22,19 @@
         margin-top: 20px;
     }
 
+    .banner-container{
+        flex-direction: column-reverse;
+    }
+
+    .banner-info, .banner-image{
+        width: 100%;
+        margin-top: 20px;
+
+    }
+
 }
 
-/* for small mobile devices */
+/* for medium mobile devices and tablets */
 @media screen and (min-width: 576px) and (max-width: 960px) {
     .nav-container{
         flex-direction: column;
@@ -46,6 +56,16 @@
     .logo-container{
         width: 100%;
         margin-top: 20px;
+    }
+
+    .banner-container{
+        flex-direction: column-reverse;
+    }
+
+    .banner-info, .banner-image{
+        width: 100%;
+        margin-top: 20px;
+
     }
 
 }
