--- a/style.css
+++ b/style.css
@@ -73,5 +73,92 @@ background-color: rgba(11, 2, 35, 0.10);
 padding: 10px 15px;
 }
 
-/* navbar finished */
+/* navbar section finished */
+
+.banner-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px auto 0;
+    padding: 10px 15px;
+    max-width: 1900px;
+    min-height: 100px;
+    background-color:linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
+}
+
+.banner-image{
+    width: 50%;
+}
+
+.banner-image img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.banner-info{
+    width: 50%;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.banner-info h3{
+color: #0B0223;
+text-align: center;
+font-size: 40px;
+font-weight: 600;
+text-transform: uppercase;
+
+}
+
+.banner-info h2{
+text-align: center;
+font-size: 75px;
+font-weight: 800;
+text-transform: uppercase;
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.banner-info h1{
+color: #534C64;
+text-align: center;
+font-size: 20px;
+font-weight: 500;
+text-transform: lowercase;
+}
+
+.banner-info h4{
+color: #534C64;
+font-size: 20px;
+font-weight: 500;
+}
+
+.banner-info h5{
+color: #534C64;
+font-size: 20px;
+font-weight: 500;
+}
+
+.btn-primary{
+padding: 21px 40px;
+gap: 10px;
+border-radius: 48px;
+color: #FFF;
+border: none;
+background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+margin: 20px 0;
+}
+
+.btn-secondary{
+padding: 21px 40px;
+gap: 10px;
+border-radius: 48px;
+background: #4EC5F7;
+color: #FFF;
+border: none;
+}
+
+
 
