--- a/responsive.css
+++ b/responsive.css
@@ -32,6 +32,14 @@
 
     }
 
+    .games-banner{
+        flex-direction: column;
+    }
+
+    .games-info .funny{
+        font-size: 35px;
+    }
+
 }
 
 /* for medium mobile devices and tablets */
@@ -65,7 +73,10 @@
     .banner-info, .banner-image{
         width: 100%;
         margin-top: 20px;
+    }
 
+    .games-banner{
+        flex-direction: column;
     }
 
 }
