--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ color: #FFF;
 border: none;
 background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
 margin: 20px 0;
+text-transform: uppercase;
 }
 
 .btn-secondary{
@@ -158,7 +159,68 @@ border-radius: 48px;
 background: #4EC5F7;
 color: #FFF;
 border: none;
+text-transform: uppercase;
 }
 
+/* banner section finished */
 
+/* online games video section start */
 
+.games-video-section{
+    background: #FFF;
+    margin: 20px 0;
+}
+
+.games-info{
+    margin: 20px 0;
+}
+
+.games-info h3{
+color: #0B0223;
+text-align: center;
+font-size: 48px;
+font-weight: 700;
+}
+
+.games-info .funny{
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-size: 48px;
+font-weight: 700;
+}
+
+.games-info p{
+color: #534C64;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+margin: 20px 0;
+}
+
+.games-banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.games-icon{
+    width: 50%;
+}
+
+.games-icon img{
+    width: 100%;
+    margin: 20px 0;
+}
+
+.games-icon p{
+color: #534C64;
+font-family: Work Sans;
+font-size: 20px;
+font-weight: 500;
+}
+
+/*  online games video section finish */
