--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ font-weight: 400;
     justify-content: space-around;
     align-items: center;
     border-radius: 2px solid red;
+    margin: 20px 0;
 }
 
 /* games info section finish */
