--- a/style.css
+++ b/style.css
@@ -13,23 +13,30 @@ body {
 }
 
 /* navbar section started */
-nav {
+header{
+    background: #fff;
+    width: 100%;
+}
+
+
+/* nav {
   justify-content: space-between;
   background: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-}
+} */
 
 .nav-container {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   min-height: 100px;
   max-width: 1900px;
   margin: 0 auto;
+  padding: 35px 0px;
 }
 
 .logo-container {
   display: flex;
-  width: 50%;
   gap: 20px;
 }
 
@@ -350,6 +357,10 @@ font-weight: 400;
     color: #FFF;
 }
 
+.footer-logo{
+    display: flex;
+    align-items: center;
+}
 .footer-container .footer-logo{
     justify-content: center;
     margin-bottom: 60px;
