all work completed finally

--- a/style.css
+++ b/style.css
@@ -233,11 +233,11 @@ background-clip: text;
     margin: 20px 0;
 }
 
-.games-icon:hover:nth-child(3){
+.games-icon:hover{
     position: relative;
-    transition: 3s ease-in-out;
+    transition: 0.3s ease;
     background-color: black;
-    box-shadow: black;
+    cursor: pointer;
 }
 
 .games-icon p{
