--- a/style.css
+++ b/style.css
@@ -183,8 +183,29 @@ text-transform: uppercase;
     text-align: center;
 }
 
+.games-info-inner h3{
+color: #0B0223;
+text-align: center;
+font-size: 48px;
+font-weight: 700;
+}
+
+.games-info-inner .funny{
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-family: Work Sans;
+font-size: 48px;
+font-weight: 700;
+}
+
 .games-info-inner >p{
     margin: 10px auto 50px;
+color: #534C64;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
 }
 
 .games-banner{
@@ -227,10 +248,11 @@ text-transform: uppercase;
 }
 
 .watch-now p{
-    font-size: 1.15rem;
+    font-size: 20px;
     margin-top: 10px;
+    font-weight: 500;
     color: #FF42A5;
-    font-weight: 700;
+    text-align: center;
 }
 
 .watch-now i{
